# Burger_Project

./: .gitignore  CHANGELOG.md  manage.py
.github/workflows/: release.yml
Common/: apps.py  urls.py
Common/templates/: home.html
Core/: CHANGELOG.md  asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
Inventory/: forms.py  models.py  urls.py
Inventory/migrations/: 0001_initial.py  0002_remove_recipe_dish_and_more.py
Menu/: apps.py  forms.py  models.py  urls.py  views.py
Menu/migrations/: 0002_category_historicaldish_category_and_more.py
Menu/templates/: product_form.html  product_list.html
PBurger/: .gitignore  TODO.md  db.sqlite3  manage.py
PBurger/Burger/: asgi.py  settings.py  urls.py  wsgi.py
PBurger/Cashier/: apps.py  forms.py  models.py  proccesscheckout.py  services.py  urls.py  utils.py  views.py
PBurger/Cashier/migrations/: 0001_initial.py  0002_initial.py  (+7 more)
PBurger/Common/: apps.py  git_parser.py  views.py
PBurger/Core/: urls.py
PBurger/Greeting/: urls.py  views.py
PBurger/Inventory/: apps.py  forms.py  models.py  urls.py  views.py
PBurger/Menu/: models.py  urls.py  views.py
PBurger/Recipe/: apps.py  forms.py  models.py  urls.py  views.py
PBurger/Sales/: models.py  services.py  urls.py
PBurger/templates/: cs_layout_lista.html  layout.html  layout_lista.html
PamBurger/: manage.py
PamBurger/PamBurger/: asgi.py  settings.py  urls.py  wsgi.py
Sales/: apps.py  forms.py  models.py  services.py  urls.py  views.py
Sales/migrations/: 0002_initial.py
Sales/templates/: hub.html  hub2.html
static/css/: style.css
(+52 files in other folders)
