[tool.semantic_release]

version_variables = [
    "common/__init__.py:__version__"
]

version_toml = [
    "pyproject.toml:project.version"
]

tag_format = "v{version}"


[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.publish]
dist = false
upload_to_vcs_release = false

[tool.semantic_release.commit_parser_options]

allowed_tags = ["feat", "fix", "perf", "refactor", "chore", "docs", "style", "test", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[project]
name = "your-project-name"
version = "0.0.1"